Add Jest script to test Webpack compilation

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "eslint": "eslint src/**/*.{ts,tsx}",
     "eslint-fix": "eslint **/*/*.{ts,tsx} --fix",
     "test": "jest --coverage --runInBand --verbose",
-    "pretest-case": "npm run build && webpack --config test/webpack.build1.config.js && webpack --config test/webpack.build2.config.js",
+    "pretest-case:src1": "webpack --config test/webpack.build1.config.js",
+    "pretest-case:src2": "webpack --config test/webpack.build2.config.js",
+    "pretest-case": "npm run build && npm run pretest-case:src1 && npm run pretest-case:src2",
     "test-case": "node test/dist2",
     "build": "node build",
     "preversion": "changelog check && npm test && npm run build",
