--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "Adrien Febvay <adrien.febvay@gmail.com> (https://github.com/adrien-febvay)",
   "license": "MIT",
   "scripts": {
-    "eslint": "eslint src/**/*.{ts,tsx}",
-    "eslint-fix": "eslint **/*/*.{ts,tsx} --fix",
+    "eslint": "eslint src/**/*.ts",
+    "eslint-fix": "eslint **/*/*.ts --fix",
     "test": "jest --coverage --runInBand --verbose",
     "pretest-case:src1": "webpack --config test/webpack.build1.config.js",
     "pretest-case:src2": "webpack --config test/webpack.build2.config.js",
