Configuration adjustments, ESLint ignore type declaration files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
     },
     "typeRoots": [
       "./node_modules/@types",
+      "./src/types",
     ],
     "resolveJsonModule": false,
     "esModuleInterop": true,
