Rename src/index.ts into src/MinifiyCssIdentsPlugin.ts

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "files": [
     "dist/*"
   ],
-  "main": "dist",
+  "main": "dist/MinifiyCssIdentsPlugin.js",
   "devDependencies": {
     "@babel/core": "^7.25.8",
     "@babel/preset-env": "^7.25.8",
