--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Adrien Febvay <adrien.febvay@gmail.com> (https://github.com/adrien-febvay)",
   "license": "MIT",
   "scripts": {
+    "postinstall": "node self-install",
     "eslint": "eslint src/**/*.ts",
     "eslint-fix": "eslint **/*/*.ts --fix",
     "test": "jest --coverage --runInBand --verbose",
