--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
   "files": [
     "dist/*"
   ],
-  "main": "dist/MinifiyCssIdentsPlugin.js",
+  "exports": {
+    ".": "./dist/MinifiyCssIdentsPlugin.js",
+    "./IdentGenerator": "./dist/IdentGenerator.js"
+  },
   "devDependencies": {
     "@babel/core": "^7.25.8",
     "@babel/preset-env": "^7.25.8",
