Re-arrange tsconfig in order to avoid false errors in IDE

--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,7 @@
   },
   "parserOptions": {
     "ecmaVersion": 2018,
-    "project": "./tsconfig.eslint.json",
+    "project": "./tsconfig.json",
     "sourceType": "module",
     "jsx": false
   },
