--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "minify-css-idents",
   "version": "0.6.0",
-  "description": "Rename and minify CSS identifiers to emit smaller CSS files",
+  "description": "Minify CSS identifiers in order to emit smaller CSS files",
   "author": "Adrien Febvay <adrien.febvay@gmail.com> (https://github.com/adrien-febvay)",
   "license": "MIT",
   "scripts": {
@@ -26,8 +26,11 @@
   "keywords": [
     "webpack",
     "minify",
+    "minimize",
     "css",
     "ident",
+    "identifier",
+    "classname",
     "optimization",
     "web"
   ],
@@ -69,13 +72,5 @@
   "peerDependencies": {
     "css-loader": ">= 7.0.0",
     "webpack": ">= 5.0.0"
-  },
-  "peerDependenciesMeta": {
-    "css-loader": {
-      "optional": true
-    },
-    "webpack": {
-      "optional": true
-    }
   }
 }
