--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "postcss-loader": "^8.1.1",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
+    "sass": "^1.81.0",
+    "sass-loader": "^16.0.3",
     "style-loader": "^4.0.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.5.4",
